--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ openai==1.55.0
 pydantic==2.10.1
 pydantic_core==2.27.1
 PyPDF2==3.0.1
+python-dotenv==1.0.1
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
